--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cssbeautify": "^1.0.0",
     "gulp-csso": "^3.0.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-responsive": "^2.11.0",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "postcss-image-set": "^1.0.0",
+    "postcss-image-set-function": "^3.0.1"
   },
   "dependencies": {
+    "gulp-clone": "^2.0.1",
     "gulp-rename": "^1.4.0"
   }
 }
